--- a/WebContent/profile.html
+++ b/WebContent/profile.html
@@ -27,7 +27,7 @@
     <script src="openlayersmap/util/elm-pep.js"></script>
     <!-- polyfill with features: https://cdn.polyfill.io/v2/polyfill.min.js?features=fetch,requestAnimationFrame,Element.prototype.classList,URL -->
     <script src="openlayersmap/util/polyfill.min.js"></script>
-    <script src="openlayersmap/map.3edeca68.js"></script>
+    <script src="openlayersmap/map.fb6dec34.js"></script>
     <link rel="stylesheet" href="openlayersmap/map.bb28b584.css">
 
     <!---->
@@ -42,8 +42,7 @@
     <header class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="index.html">
             <label>Apartment?</label>
-            <svg version="1.1" width="102" height="32" viewBox="0 0 102 32" class="siteheader__logo"
-                aria-labelledby="header-logo-id" role="img" focusable="false" tabindex="-1">
+            <svg version="1.1" width="102" height="32" viewBox="0 0 102 32" class="siteheader__logo" aria-labelledby="header-logo-id" role="img" focusable="false" tabindex="-1">
                 <title id="header-logo-id">
                     trivago
                 </title>
@@ -88,8 +87,7 @@
         </div>
 
         <!--Modal for logout fail-->
-        <div class="modal fade" id="ModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
-            aria-hidden="true">
+        <div class="modal fade" id="ModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -121,11 +119,9 @@
                     </tr>
                     <tr>
                         <td>Ime:</td>
-                        <td><input id="profileName" /><span class="alert alert-danger d-none ml-2" role="alert"
-                                id="profileNameError">Ime nije uneto</span></td>
+                        <td><input id="profileName" /><span class="alert alert-danger d-none ml-2" role="alert" id="profileNameError">Ime nije uneto</span></td>
                         <td>Prezime:</td>
-                        <td><input id="profileSurname"><span class="alert alert-danger d-none ml-2" role="alert"
-                                id="profileSurnameError">Prezime nije uneto</span></td>
+                        <td><input id="profileSurname"><span class="alert alert-danger d-none ml-2" role="alert" id="profileSurnameError">Prezime nije uneto</span></td>
                     </tr>
                     <tr>
                         <td>Pol:</td>
@@ -135,19 +131,15 @@
                                 <option value="POTATO">POTATO</option>
                             </select> </td>
                         <td>Trenutna lozinka:</td>
-                        <td><input type="password" id="profileOldPassword" autofocus /><span
-                                class="alert alert-danger d-none ml-2" role="alert" id="profileOldPasswordError"></span>
+                        <td><input type="password" id="profileOldPassword" autofocus /><span class="alert alert-danger d-none ml-2" role="alert" id="profileOldPasswordError"></span>
                         </td>
                     </tr>
                     <tr>
                         <td>Nova lozinka:</td>
-                        <td><input type="password" id="profileNewPassword" /><span
-                                class="alert alert-danger d-none ml-2" role="alert" id="profileNewPasswordError"></span>
+                        <td><input type="password" id="profileNewPassword" /><span class="alert alert-danger d-none ml-2" role="alert" id="profileNewPasswordError"></span>
                         </td>
                         <td>Ponovite novu lozinku:</td>
-                        <td><input type="password" id="profileRepeatedNewPassword" /><span
-                                class="alert alert-danger d-none ml-2" role="alert"
-                                id="profileRepeatedNewPasswordError"></span></td>
+                        <td><input type="password" id="profileRepeatedNewPassword" /><span class="alert alert-danger d-none ml-2" role="alert" id="profileRepeatedNewPasswordError"></span></td>
                     </tr>
                     <tr>
                         <td colspan="4" class="text-center align-middle">
