--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -27,7 +27,7 @@
     <script src="openlayersmap/util/elm-pep.js"></script>
     <!-- polyfill with features: https://cdn.polyfill.io/v2/polyfill.min.js?features=fetch,requestAnimationFrame,Element.prototype.classList,URL -->
     <script src="openlayersmap/util/polyfill.min.js"></script>
-    <script src="openlayersmap/map.3edeca68.js"></script>
+    <script src="openlayersmap/map.fb6dec34.js"></script>
     <link rel="stylesheet" href="openlayersmap/map.bb28b584.css">
 
     <!---->
@@ -43,8 +43,7 @@
     <header class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="index.html">
             <label>Apartment?</label>
-            <svg version="1.1" width="102" height="32" viewBox="0 0 102 32" class="siteheader__logo"
-                aria-labelledby="header-logo-id" role="img" focusable="false" tabindex="-1">
+            <svg version="1.1" width="102" height="32" viewBox="0 0 102 32" class="siteheader__logo" aria-labelledby="header-logo-id" role="img" focusable="false" tabindex="-1">
                 <title id="header-logo-id">
                     trivago
                 </title>
@@ -89,8 +88,7 @@
         </div>
 
         <!--Modal for logout fail-->
-        <div class="modal fade" id="ModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
-            aria-hidden="true">
+        <div class="modal fade" id="ModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -204,20 +202,15 @@
                     <table class="table">
                         <tr>
                             <td>Ime:</td>
-                            <td><input id="registerName" /><span class="alert alert-danger d-none ml-2" role="alert"
-                                    id="registerNameError">Ime nije uneto</span></td>
+                            <td><input id="registerName" /><span class="alert alert-danger d-none ml-2" role="alert" id="registerNameError">Ime nije uneto</span></td>
                             <td>Korisničko ime:</td>
-                            <td><input id="registerUsername"><span class="alert alert-danger d-none ml-2" role="alert"
-                                    id="registerUsernameError">Korisničko ime nije uneto</span></td>
+                            <td><input id="registerUsername"><span class="alert alert-danger d-none ml-2" role="alert" id="registerUsernameError">Korisničko ime nije uneto</span></td>
                         </tr>
                         <tr>
                             <td>Prezime:</td>
-                            <td><input id="registerSurname" /><span class="alert alert-danger d-none ml-2" role="alert"
-                                    id="registerSurnameError">Prezime nije uneto</span></td>
+                            <td><input id="registerSurname" /><span class="alert alert-danger d-none ml-2" role="alert" id="registerSurnameError">Prezime nije uneto</span></td>
                             <td>Lozinka:</td>
-                            <td><input type="password" id="registerPassword" /><span
-                                    class="alert alert-danger d-none ml-2" role="alert"
-                                    id="registerPasswordError">Lozinka nije uneta</span></td>
+                            <td><input type="password" id="registerPassword" /><span class="alert alert-danger d-none ml-2" role="alert" id="registerPasswordError">Lozinka nije uneta</span></td>
                         </tr>
                         <tr>
                             <td>Pol:</td>
@@ -227,9 +220,7 @@
                                     <option value="POTATO">POTATO</option>
                                 </select> </td>
                             <td>Ponovite lozinku:</td>
-                            <td><input type="password" id="registerRepeatedPassword" /><span
-                                    class="alert alert-danger d-none ml-2" role="alert"
-                                    id="registerRepeatedPasswordError"></span></td>
+                            <td><input type="password" id="registerRepeatedPassword" /><span class="alert alert-danger d-none ml-2" role="alert" id="registerRepeatedPasswordError"></span></td>
                         </tr>
                         <tr>
                             <td colspan="4" class="text-center align-middle">
