--- a/openlayersmaps/index.html
+++ b/openlayersmaps/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <title>Geographic Coordinates</title>
     <meta charset="utf-8">
     <!-- Pointer events polyfill for old browsers, see https://caniuse.com/#feat=pointer -->
@@ -12,24 +13,32 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
     <script src="map.js"></script>
     <style>
-      .map {
-        width: 100%;
-        height:500px;
-      }
-      td {
-        padding: 0 0.5em;
-        text-align: right;
-      }
+        .map {
+            width: 100%;
+            height: 500px;
+        }
+        
+        td {
+            padding: 0 0.5em;
+            text-align: right;
+        }
     </style>
-  </head>
-  <body>
+</head>
+
+<body>
     <div id="mapSearch" class="map"></div>
     <div id="mapResults" class="map">
-      <div id="popup"></div>
+        <div id="popup"></div>
     </div>
     <script type="text/javascript">
-    /*initSearchMap(undefined);initResultsMap(true, undefined);addAllApartmentPointsResultMap([[0,0],[40,20]]);*/
-    initSearchMap(undefined);initResultsMap(true, undefined);/*enablePopupResultMap(function(a,b){return 'boik'+a+' '+b;});*/addAllApartmentPointsResultMap([[0,0],[40,20]]);//removeAllApartmentPointsResultMap();
+        /*initSearchMap(undefined);initResultsMap(true, undefined);addAllApartmentPointsResultMap([[0,0],[40,20]]);*/
+        initSearchMap(undefined);
+        initResultsMap(true, [45, 20], undefined); /*enablePopupResultMap(function(a,b){return 'boik'+a+' '+b;});*/
+        addAllApartmentPointsResultMap([
+            [0, 0],
+            [40, 20]
+        ], false); //removeAllApartmentPointsResultMap();
     </script>
-  </body>
+</body>
+
 </html>
