--- a/WebContent/apartments.html
+++ b/WebContent/apartments.html
@@ -202,6 +202,10 @@
                     pretrage.</label>
             </div>
         </div>
+        <div class="row mt-3 mb-3 ml-5 mr-5 d-none" id="ResultsOperations">
+            <button class="btn btn-info mr-2" id="ascending">Sortirati u rastućem poretku</button>
+            <button class="btn btn-info ml-2" id="descending">Sortirati u opadajućem poretku</button>
+        </div>
         <div class="row mt-3 mb-3 d-none" id="ResultsExist">
             <div class="col-8 d-flex align-items-center">
                 <div class="container-fluid overflow-auto" style="max-height: 600px;">
@@ -222,7 +226,7 @@
                 <hr />
             </div>
             <div class="col-auto">
-                <b class="h4">Ili, registrujte se</b>
+                <b class="h4 ">Ili, registrujte se</b>
             </div>
             <div class="col">
                 <hr>
@@ -237,33 +241,34 @@
                             <td>Ime:</td>
                             <td><input id="registerName" /><span class="alert alert-danger d-none ml-2" role="alert" id="registerNameError">Ime nije uneto</span></td>
                             <td>Korisničko ime:</td>
-                            <td><input id="registerUsername"><span class="alert alert-danger d-none ml-2" role="alert" id="registerUsernameError">Korisničko ime nije uneto</span></td>
+                            <td>
+                                <input id="registerUsername"><span class=" alert alert-danger d-none ml-2 " role="alert " id="registerUsernameError ">Korisničko ime nije uneto</span></td>
                         </tr>
                         <tr>
                             <td>Prezime:</td>
-                            <td><input id="registerSurname" /><span class="alert alert-danger d-none ml-2" role="alert" id="registerSurnameError">Prezime nije uneto</span></td>
+                            <td><input id="registerSurname " /><span class="alert alert-danger d-none ml-2 " role="alert " id="registerSurnameError ">Prezime nije uneto</span></td>
                             <td>Lozinka:</td>
-                            <td><input type="password" id="registerPassword" /><span class="alert alert-danger d-none ml-2" role="alert" id="registerPasswordError">Lozinka nije uneta</span></td>
+                            <td><input type="password " id="registerPassword " /><span class="alert alert-danger d-none ml-2 " role="alert " id="registerPasswordError ">Lozinka nije uneta</span></td>
                         </tr>
                         <tr>
                             <td>Pol:</td>
-                            <td><select id="registerSex">
-                                    <option value="M">M</option>
-                                    <option value="Ž">Ž</option>
-                                    <option value="POTATO">POTATO</option>
+                            <td><select id="registerSex ">
+                                    <option value="M ">M</option>
+                                    <option value="Ž ">Ž</option>
+                                    <option value="POTATO ">POTATO</option>
                                 </select> </td>
                             <td>Ponovite lozinku:</td>
-                            <td><input type="password" id="registerRepeatedPassword" /><span class="alert alert-danger d-none ml-2" role="alert" id="registerRepeatedPasswordError"></span></td>
+                            <td><input type="password " id="registerRepeatedPassword " /><span class="alert alert-danger d-none ml-2 " role="alert " id="registerRepeatedPasswordError "></span></td>
                         </tr>
                         <tr>
-                            <td colspan="4" class="text-center align-middle">
-                                <button type="submit" class="btn btn-primary">Registracija</button>
+                            <td colspan="4 " class="text-center align-middle ">
+                                <button type="submit " class="btn btn-primary ">Registracija</button>
                             </td>
                         </tr>
                     </table>
                 </form>
             </div>
-            <div class="col"></div>
+            <div class="col "></div>
         </div>
     </div>
 </body>
