search on users page

--- a/WebContent/reservations.html
+++ b/WebContent/reservations.html
@@ -128,7 +128,7 @@
         </form>
     </header>
 
-    <table id="reservations"></table>
+    <table border="1" id="reservations"></table>
 </body>
 
 </html>
