hosts can accept reservation

--- a/WebContent/reservations.html
+++ b/WebContent/reservations.html
@@ -128,7 +128,17 @@
         </form>
     </header>
 
-    <table border="1" id="reservations"></table>
+    <div class="container column">
+        <div class="row">
+            <table border="1" id="reservations">
+                <tr>
+                    <th>Apartman</th>
+                    <th>Gost</th>
+                    <th>Status</th>
+                </tr>
+            </table>
+        </div>
+    </div>
 </body>
 
 </html>
