guests can add comments

--- a/WebContent/reservations.html
+++ b/WebContent/reservations.html
@@ -135,6 +135,7 @@
                     <th>Apartman</th>
                     <th>Gost</th>
                     <th>Status</th>
+                    <th>Cena</th>
                 </tr>
             </table>
         </div>
