--- a/WebContent/apartment.html
+++ b/WebContent/apartment.html
@@ -35,6 +35,7 @@
 
     <script src="types.js" type="text/javascript"></script>
     <script src="user.js" type="text/javascript"></script>
+    <script src="reservations.js" type="text/javascript"></script>
     <script src="apartment.js" type="text/javascript"></script>
 </head>
 
@@ -126,6 +127,34 @@
             </table>
         </form>
     </header>
+
+    <div class="container column">
+        <div id="commentSection" class="d-none">
+            <form id="commentForm">
+                <table>
+                    <tr>
+                        <td>Utisak o apartmanu:</td>
+                        <td><textarea id="apartmentComment" rows="4" cols="50"></textarea></td>
+                    </tr>
+                    <tr>
+                        <td>Ocena apartmana:</td>
+                        <td><select id="apartmentMark">
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
+                        </select></td>
+                    </tr>
+                    <tr>
+                        <td colspan="2" class="text-center align-middle">
+                            <button type="submit" class="btn btn-primary">Pošalji</button>
+                        </td>
+                    </tr>
+                </table>
+            </form>
+        </div>
+    </div>
 </body>
 
 </html>
