--- a/WebContent/apartment.html
+++ b/WebContent/apartment.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="bootstrap-4.5.0-dist/css/bootstrap.min.css" type='text/css' />
     <script src="bootstrap-4.5.0-dist/js/bootstrap.min.js" type='text/javascript'></script>
 
+    <!-- here with reason -->
+    <script src="apartment.js" type="text/javascript"></script>
+
     <!---->
 
     <!-- datepicker (requires bootstrap, jquery, popper) -->
@@ -36,7 +39,6 @@
     <script src="types.js" type="text/javascript"></script>
     <script src="user.js" type="text/javascript"></script>
     <script src="reservations.js" type="text/javascript"></script>
-    <script src="apartment.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -129,30 +131,42 @@
     </header>
 
     <div class="container column">
-        <div id="commentSection" class="d-none">
-            <form id="commentForm">
-                <table>
+        <div id="commentSection">
+            <div class="d-none row" id="commentList">
+                <table id="commentsTable">
                     <tr>
-                        <td>Utisak o apartmanu:</td>
-                        <td><textarea id="apartmentComment" rows="4" cols="50"></textarea></td>
+                        <th>Korisničko ime</th>
+                        <th>Komentar</th>
+                        <th>Ocena</th>
+                        <th>Status</th>
                     </tr>
-                    <tr>
-                        <td>Ocena apartmana:</td>
-                        <td><select id="apartmentMark">
+                </table>
+            </div>
+            <div class="d-none row" id="addingComment">
+                <form id="commentForm">
+                    <table>
+                        <tr>
+                            <td>Utisak o apartmanu:</td>
+                            <td><textarea id="apartmentComment" rows="4" cols="50"></textarea></td>
+                        </tr>
+                        <tr>
+                            <td>Ocena apartmana:</td>
+                            <td><select id="apartmentMark">
                             <option value="1">1</option>
                             <option value="2">2</option>
                             <option value="3">3</option>
                             <option value="4">4</option>
                             <option value="5">5</option>
                         </select></td>
-                    </tr>
-                    <tr>
-                        <td colspan="2" class="text-center align-middle">
-                            <button type="submit" class="btn btn-primary">Pošalji</button>
-                        </td>
-                    </tr>
-                </table>
-            </form>
+                        </tr>
+                        <tr>
+                            <td colspan="2" class="text-center align-middle">
+                                <button type="submit" class="btn btn-primary">Pošalji</button>
+                            </td>
+                        </tr>
+                    </table>
+                </form>
+            </div>
         </div>
     </div>
 </body>
