--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -84,6 +84,9 @@
                 <li class="nav-item d-none ADMINISTRATOR HOST" id="usersElement">
                     <a class="nav-link" href="users.html">Korisnici</a>
                 </li>
+                <li class="nav-item d-none ADMINISTRATOR" id="amenitiesElement">
+                    <a class="nav-link" href="amenities.html">Oprema</a>
+                </li>
             </ul>
         </div>
 
