asc and desc sort in reservations

--- a/WebContent/reservations.html
+++ b/WebContent/reservations.html
@@ -132,6 +132,10 @@
     </header>
 
     <div class="container column">
+        <div class="mb-3">
+            <button class="btn btn-info" id="ascending">Sortirati u rastućem poretku</button>
+            <button class="btn btn-info ml-2" id="descending">Sortirati u opadajućem poretku</button>
+        </div>
         <div class="row">
             <table border="1" id="reservations">
                 <tr>
