--- a/WebContent/apartment.html
+++ b/WebContent/apartment.html
@@ -140,6 +140,26 @@
         </form>
     </div>
 
+    <div class="container mt-3 mb-4">
+        <form method="GET" class="align-items-center" action="apartments.html">
+            <table class="table align-items-center align-middle text-center">
+                <tr>
+                    <td class="align-middle">
+                        <b>Rezerviši: </b>
+                    </td>
+                    <td colspan="3" class="align-middle">
+                        <div class="input-group input-daterange align-items-center">
+                            <input name="dateFrom" type="text" class="form-control">
+                            <div class="input-group-addon mr-3 ml-3 align-middle"> - </div>
+                            <input name="dateTo" type="text" class="form-control">
+                        </div>
+                    </td>
+                    <td class="align-middle"><input type="submit" class="btn btn-primary" value="Rezerviši"></td>
+                </tr>
+            </table>
+        </form>
+    </div>
+
     <div class="container column">
         <div id="commentSection">
             <div class="d-none row" id="commentList">
