--- a/WebContent/apartment.html
+++ b/WebContent/apartment.html
@@ -141,7 +141,7 @@
     </div>
 
     <div class="container mt-3 mb-4 d-none GUEST">
-        <form id="reservation" lass="align-items-center">
+        <form id="reservation" class="align-items-center">
             <table class="table align-items-center align-middle text-center">
                 <tr>
                     <td class="align-middle">
