not working cause of rammba

--- a/WebContent/apartment.html
+++ b/WebContent/apartment.html
@@ -159,7 +159,7 @@
                 <tr>
                     <td class="align-middle">Poruka domaćinu: </td>
                     <td colspan="3" class="align-middle">
-                        <input type="text" class="form-control">
+                        <input id="messageForHost" type="text" class="form-control">
                     </td>
                 </tr>
                 <tr>
