edit amenities and status in apartment

--- a/WebContent/apartment.html
+++ b/WebContent/apartment.html
@@ -233,7 +233,7 @@
                         <td><select id="apartmentType" disabled>
                                 <option value="APARTMAN">APARTMAN</option>
                                 <option value="SOBA">SOBA</option>
-                            </select> </td>
+                            </select></td>
                         <td>Cena noćenja (RSD):</td>
                         <td><input type="number" min="0" id="pricePerNight" disabled /></td>
                     </tr>
@@ -266,6 +266,13 @@
                         <td><input id="country" disabled/></td>
                         <td>Oprema:</td>
                         <td><select id="amenities" multiple size="5" disabled></select></td>
+                    </tr>
+                    <tr>
+                        <td colspan="4" class="text-center align-middle d-none" id="statusData"><select id="apartmentStatus">
+                                <option value="AKTIVAN">AKTIVAN</option>
+                                <option value="NEAKTIVAN">NEAKTIVAN</option>
+                            </select>
+                        </td>
                     </tr>
                     <tr>
                         <td colspan="4" class="text-center align-middle">
