delete apartment done

--- a/WebContent/apartment.html
+++ b/WebContent/apartment.html
@@ -275,11 +275,14 @@
                         </td>
                     </tr>
                     <tr>
-                        <td colspan="4" class="text-center align-middle">
+                        <td colspan="2" class="text-center align-right">
                             <button type="submit" class="btn btn-primary d-none" id="editButton">Sačuvaj</button>
                             <span class="alert alert-danger d-none ml-2" role="alert" id="addApartmentError">Nisu
                                 uneti ispravni podaci!
                             </span>
+                        </td>
+                        <td colspan="2" class="text-center align-left">
+                            <button type="submit" class="btn btn-primary d-none" id="deleteApartment">Obriši ovaj apartman</button>
                         </td>
                     </tr>
                 </table>
